# ethereumcrowd

./: .editorconfig  .gitignore  README.md  development.env  nginx.conf
admin/: angular.json  package-lock.json  package.json
admin/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
admin/src/app/api/: api.service.ts
admin/src/app/auth/: auth.service.ts
admin/src/app/home/: home.component.html
admin/src/app/people/: people.component.html  people.component.ts  person.component.html  person.component.ts
api/: Cargo.toml  Dockerfile
api/migrations/2018-12-06-174228_create_people/: down.sql  up.sql
api/migrations/2018-12-06-200113_create_reddit/: down.sql  up.sql
api/migrations/2018-12-06-200113_user_reddit/: down.sql  up.sql
api/migrations/2018-12-08-173714_create_reddit_posts/: down.sql  up.sql
api/migrations/2018-12-12-043102_create_reddit_comments/: down.sql  up.sql
api/migrations/2018-12-12-140936_create_twitter/: down.sql  up.sql
api/scripts/: test.sh
api/src/: db.rs  main.rs  schema.rs
api/src/person/: mod.rs  test.rs
api/src/reddit/: mod.rs  reddit_comment.rs  reddit_post.rs  test.rs
api/src/reddit/src/: schema.rs
api/src/twitter/: mod.rs
client/: package-lock.json
design/: similar_sites.txt  stock_photos.txt
reddit/: README.md  example.env  initialize.py  reddit.py  requirements.txt  rss.py  twitter_pop.py  user.py
reddit/scripts/: initalize.sh  run.sh
scripts/: admin  api  backup  cronjob  front-end  init  nginx  restore
