[package]
authors = ["Deon <deonsummers91@gmail.com>"]
name = "api"
version = "0.1.0"

[dependencies]
dotenv = "0.13.0"
postgres = "0.15.2"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
rand = {version = "0.6.1", optional = true}
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_cors = "0.3.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
chrono = "0.4.6"


[dependencies.diesel]
features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono"
]
version = "1.3.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.3.17"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.6.0"
