[package]
authors = ["Deon <deonsummers91@gmail.com>"]
name = "api"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
dotenv = "0.13.0"
postgres = "0.15.2"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_cors = "0.5.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
speculate = "0.1.0"

[dependencies.diesel]
features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
]
version = "1.3.3"

[dependencies.rand]
optional = true
version = "0.6.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.2"

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
version = "^0.6.0"
